--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="http://127.0.0.1:8000/video/" alt="Live Webcam Feed" width="640" />
+    <img src="http://127.0.0.1:8000/video/" alt="Live Webcam Feed" width="70%" />
 </body>
 </html>
