Add heading for live image feed in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Live Image Feed OpenCV</h2>
     <img src="http://127.0.0.1:8000/video/" alt="Live Webcam Feed" width="70%" />
 </body>
 </html>
