feat: Integrate face detection service and enhance drowsiness detection metrics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Live Image Feed OpenCV</h2>
-    <img src="http://127.0.0.1:8000/video/" alt="Live Webcam Feed" width="70%" />
+    <img src="http://127.0.0.1:8000/video/stream" alt="Live Webcam Feed" width="70%" />
 </body>
 </html>
